# afm-lbl-data-driven-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml
3D models/: 100_ml_glass_bottle.STEP  Petri_dish.STEP  Petri_dish_holder.STEP  Petri_dish_output_stack.STEP  Plates_holder.STEP  Tweezers_holder.STEP  Tweezers_pusher_holder.STEP
migrations/: env.py
migrations/versions/: 0001_initial.py
src/app/: config.py  logging.py  main.py
src/app/api/: deps.py  errors.py
src/app/cli/: build.py  cleanup.py  ingest.py  main.py  seed.py
src/app/data/: polyelectrolytes.json
src/app/db/: models.py  session.py
src/app/features/: __init__.py  acf_2d.py  acf_rowcol.py  base.py  distribution.py  iso25178.py  lacunarity.py  metadata.py  minmax_patches.py  pe_sequence_kmer.py  polyelectrolyte.py  preprocessing.py  psd_radial.py  rdkit_monomer.py  (+1 more)
src/app/features/_lacunarity/: CMakeLists.txt  README.md
tests/: conftest.py  conftest_db.py
tests/e2e/: test_full_flow.py
tests/integration/: test_api_experiments.py  test_api_exports.py  test_api_health.py  test_api_samples.py  test_api_scans.py  test_cli.py  test_worker_idempotency.py  test_worker_pipeline.py
tests/unit/: test_config.py  test_features_acf_2d.py  test_features_acf_rowcol.py  test_features_distribution.py  test_features_iso25178.py  test_features_lacunarity.py  test_features_metadata.py  test_features_minmax_patches.py  test_features_pe_sequence_kmer.py  test_features_polyelectrolyte.py  test_features_preprocessing.py  test_features_psd_radial.py  test_features_rdkit_monomer.py  test_features_registry.py  test_features_tda_persistence.py  test_logging.py  test_models.py  test_parsers_native.py  test_parsers_txt.py  test_polyelectrolyte_seed.py  test_storage_factory.py  test_storage_local.py  test_storage_s3.py
(+30 files in other folders)
