[project]
name = "afm-lbl-backend"
version = "0.1.0"
description = "Backend for AFM + LbL polyelectrolyte data-driven pipeline"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.20",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "celery>=5.4",
    "redis>=5.2",
    "boto3>=1.35",
    "gudhi>=3.11",
    "rdkit>=2024.3",
    "statsmodels>=0.14",
    "numpy>=2.0",
    "pyarrow>=18.0",
    "surfalize>=0.13",
    "pyspm>=0.6",
    "afmformats>=0.18",
    "typer>=0.15",
    "structlog>=24.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "httpx>=0.28",
    "testcontainers[postgres,redis]>=4.8",
    "moto[s3]>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
